--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ docstring-code-format = true
 [tool.ruff]
 line-length = 88
 show-fixes = true
-select = [
+lint.select = [
     "F",   # Pyflakes
     "W",   # pycodestyle
     "E",   # pycodestyle
@@ -72,7 +72,7 @@ select = [
     "PL",  # Pylint
     "T201", # Print Statement
 ]
-ignore = ["E501"]  # Ruff format takes care of line-too-long
+lint.ignore = ["E501"]  # Ruff format takes care of line-too-long
 
 [tool.kedro_telemetry]
 project_id = "a3f78097e2b34a4dbd1d422c19e19c0c"
